# lupa

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile  spec.md
.github/workflows/: .runner-cache  ci.yml
eval/: analyze.py  run.py
src/: cli.rs  conflicts.rs  context.rs  detect.rs  grammars.rs  lib.rs  main.rs  model.rs  render.rs  walk.rs
src/adapters/: arborium.rs  c_family.rs  config.rs  diff.rs  go.rs  javascript.rs  just.rs  kotlin.rs  markdown.rs  mod.rs  nix.rs  python.rs  rust.rs  svelte.rs  syntax_nodes.rs  typst.rs
tests/: cli_v1.rs  conflicts.rs  html.rs  ini_diff.rs  render_v1.rs
tests/fixtures/: .gitconfig  .gitmodules  conflicted.rs  duplicate_headings.md  justfile  no_block_pls_shapes.rs  rust_attributes.rs  rust_symbols.rs  source_shapes.c  source_shapes.cc  source_shapes.cpp  source_shapes.cxx  source_shapes.diff  source_shapes.go  source_shapes.h  source_shapes.hh  source_shapes.hpp  source_shapes.html  source_shapes.hxx  source_shapes.ini  source_shapes.js  source_shapes.json  source_shapes.jsx  source_shapes.kts  source_shapes.nix  source_shapes.py  source_shapes.svelte  source_shapes.toml  source_shapes.ts  source_shapes.tsx  source_shapes.typ  source_shapes.yaml
tests/fixtures/digest_tree/: plain-file  security-change  settings-file  shell-fragment  shell-script.unknown  standalone-viewer  visible-script  visible.bash  visible.c  visible.cc  visible.cmake  visible.cpp  visible.css  visible.cxx  visible.dockerfile  visible.fish  visible.go  visible.h  visible.hh  visible.hpp  visible.html  visible.hxx  visible.ini  visible.js  visible.jsonc  visible.jsx  visible.just  visible.kt  visible.kts  visible.lua  visible.nginx  visible.nix  visible.patch  visible.proto  visible.py  visible.svelte  visible.ts  visible.tsx  visible.typ
tests/fixtures/fallback/: CMakeLists.txt  activate.fish  nginx.conf  parser.proto  probe.lua  query.sql  script.bash  stylesheet.css
tests/fixtures/stress/: CMakeLists.txt  Dockerfile  activate.fish  document.md  justfile  nginx.conf  probe.lua  schema.proto  script.bash  security.patch  source.c  source.cpp  source.go  source.html  source.ini  source.js  source.json  source.jsonc  source.jsx  source.kt  source.nix  source.py  source.rs  source.svelte  source.toml  source.ts  source.tsx  source.typ  source.yaml  stylesheet.css
